# blogosphere

./: .gitignore  Cargo.toml  README.md  config.toml  style.css
src/: html.rs  main.rs  util.rs
static/: style.css
static/templates/: about.html  item.html  page.html
templates/: feed.html  page.html
