[package]
name = "blogosphere"
version = "0.2.0"
authors = ["theorangepotato"]
edition = "2018"
description = "A simple, single user, server-side-rendered RSS feed reader."
readme = "README.md"
keywords = ["rss", "feed", "atom", "blod", "server"]
license = "AGPL-3.0-or-later"

[dependencies]
actix-rt = "1"
actix-web = "2"
rss = {version = "1", features = ["from_url"]}
lazy_static = "1.4"
toml = "0.5"
serde = "1.0"
